--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,15 +1,17 @@
 version: '3'
 services:
   api:
-    build: ./docker
+    build: ./docker/Dockerfile.dev
     restart: always
     ports:
-      - 8080:3000
+      - 3000:3000
     environment:
       DB_URL: "postgres://postgres:postgres@db:5432"
       SECRET: "secret_from_docker"
     depends_on:
       - db
+    volumes:
+      - .:/app
   db:
     image: postgres:15.2-alpine
     restart: always
