--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ schemars = "0.8.16"
 jsonwebtoken = "9"
 regex = "1.5"
 just = "1.16.0"
+tokio-postgres = {version = "0.7.10", features = ["with-serde_json-1"]}
+postgres-from-row = "0.5.2"
