--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,6 @@ services:
     restart: always
     ports:
       - 8080:3000
-    environment:
-      DB_URL: "postgres://postgres:postgres@db:5432"
-      SECRET: "secret_from_docker"
-      ENV: "prod"
     depends_on:
       - db
   db:
@@ -21,8 +17,8 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - db:/var/lib/postgresql/data
+      - db-data:/var/lib/postgresql/data
 
 volumes:
-  db:
+  db-data:
     driver: local
