--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -1,4 +1,10 @@
 FROM messense/rust-musl-cross:x86_64-musl as builder
+
+ENV DB_URL=postgres://postgres:postgres@localhost:5432
+ENV SECRET=secret_from_docker
+ENV ENV=dev
+ENV RUST_BACKTRACE=1
+
 RUN rustup update nightly && \
     rustup target add --toolchain nightly x86_64-unknown-linux-musl
 
@@ -8,11 +14,10 @@ RUN cargo install cargo-watch
 
 WORKDIR /app
 
-# COPY ../Cargo.toml .
-# COPY ../Cargo.lock .
 
-# create a volume for src
-RUN mkdir src
+COPY . /app
+
 VOLUME ["/app"]
 
-RUN cargo watch -x "run api --path ./src"
+# RUN cargo watch -x "run api --path ./src"
+RUN cargo run api
