--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ regex = "1.5"
 just = "1.16.0"
 tokio-postgres = {version = "0.7.10", features = ["with-serde_json-1"]}
 postgres-from-row = "0.5.2"
+chrono = { version = "0.4.31", features = ["serde"] }
+serde_with = "3.4.0"
