adding Dockerfile, docker compose, .env file and Makefile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,26 @@
 version: '3'
 services:
-  api:
-    build: ./docker
+  app:
+    build: 
+      context: .
+      dockerfile: ./docker/Dockerfile
     restart: always
     ports:
       - 8080:3000
     depends_on:
       - db
+    env_file:
+      - .env
+    environment:
+      DB_URL: "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432"
+      SECRET: secret_from_docker
+      ENV: prod
   db:
     image: postgres:15.2-alpine
     restart: always
     environment:
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
+      POSTGRES_USER: "${POSTGRES_USER}"
+      POSTGRES_DB: "${POSTGRES_DB}"
     ports:
       - 5432:5432
-    volumes:
-      - db-data:/var/lib/postgresql/data
-
-volumes:
-  db-data:
-    driver: local
