--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "rust_ddd_template"
+name = "tech_challenge"
+homepage = "https://postech-5soat-grupo-25.github.io/"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 rocket_okapi = {version = "0.8.0-rc.3", features = ["swagger"]}
