--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ tokio-postgres = {version = "0.7.10", features = ["with-serde_json-1"]}
 postgres-from-row = "0.5.2"
 chrono = { version = "0.4.31", features = ["serde"] }
 serde_with = "3.4.0"
+bytes = "1.0"
