--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ postgres-from-row = "0.5.2"
 chrono = { version = "0.4.31", features = ["serde"] }
 serde_with = "3.4.0"
 bytes = "1.0"
+mockall = "0.12.1"
+tokio = "1.36.0"
