--- a/kustomize/db-postgres.yaml
+++ b/kustomize/db-postgres.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
     - name: db
-      image: postgres:15.2-alpine
+      image: brunomafra/postgres-db:latest
       ports:
         - containerPort: 5432
       envFrom:
