--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ serde_with = "3.4.0"
 bytes = "1.0"
 mockall = "0.12.1"
 tokio = "1.36.0"
+reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "blocking"] }
+
