mudando mock url

--- a/kustomize/configmap.yaml
+++ b/kustomize/configmap.yaml
@@ -7,5 +7,5 @@ data:
   POSTGRES_PASSWORD: postgres
   POSTGRES_USER: postgres
   DB_URL: postgres://postgres:postgres@db-svc:5432
-  MOCK_PAGAMENTOS_URL: mock-pagamentos-svc:9000
+  MOCK_PAGAMENTOS_URL: http://mock-pagamentos-svc:9000/payment/
   API_HOST: rust-app-svc:3000
