--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Activate nightly
+      run: rustup default nightly
     - name: Build
       run: cargo build --verbose
     - name: Run tests
