adding cognito support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,6 @@ bytes = "1.0"
 mockall = "0.12.1"
 tokio = "1.36.0"
 reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "blocking"] }
-
+aws-sdk-cognitoidentityprovider = "1.26.0"
+aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
+aws-types = "0.7" 
