--- a/kustomize/mock-pagamentos-svc.yaml
+++ b/kustomize/mock-pagamentos-svc.yaml
@@ -3,7 +3,25 @@ kind: Service
 metadata:
   name: mock-pagamentos-svc
 spec:
-  ports:
-  - port: 9000
+  type: NodePort
   selector:
     app: mock-pagamentos-pod
+  ports:
+    - protocol: TCP
+      port: 9000
+      targetPort: 9000
+      nodePort: 31300
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: mock-pagamentos-lb-svc
+spec:
+  type: LoadBalancer
+  selector:
+    app: mock-pagamentos-pod
+  ports:
+    - port: 9000
+      targetPort: 9000
