feat: update workflow and configmap

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,8 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}        
         IMAGE_TAG: ${{ steps.commit.outputs.short }}
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_RUST_API_REPOSITORY:latest -f docker/Dockerfile .
+        docker pull brunomafra/grupo-25-tech-challenge
+        docker tag brunomafra/grupo-25-tech-challenge $ECR_REGISTRY/$ECR_RUST_API_REPOSITORY:latest
         docker push $ECR_REGISTRY/$ECR_RUST_API_REPOSITORY:latest
 
     - name: Update kube config
