--- a/kustomize/configmap.yaml
+++ b/kustomize/configmap.yaml
@@ -7,6 +7,6 @@ data:
   POSTGRES_PASSWORD: mainpassword
   POSTGRES_USER: mainuser
   DB_URL: postgresql://mainuser:mainpassword@tech-challenge-db.cra60s8i0ksr.us-east-1.rds.amazonaws.com:5432/TechChallengeDb
-  MOCK_PAGAMENTOS_URL: http://a94c2deea7c61486daf1a1e8b06f1dca-136206254.us-east-1.elb.amazonaws.com:9000/payment/
-  API_HOST: afdf66f829fff46b287fc8f1c922e715-1960790542.us-east-1.elb.amazonaws.com:3000
-  AWS_COGNITO_USER_POOL_ID: us-east-1_cHfnf8rNY
+  MOCK_PAGAMENTOS_URL: http://a49bcfc17b0814367b7de1fa4f286728-1742838876.us-east-1.elb.amazonaws.com:9000/payment/
+  API_HOST: aad8d67d34e714d6885106d5c3d06077-1355197257.us-east-1.elb.amazonaws.com:3000
+  AWS_COGNITO_USER_POOL_ID: us-east-1_YZhnEtbAT
